--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,4 @@
-<h2 id="title">Welcome to Ember</h2>
+  <header class="header">
+        {{main-navigation}}</header>
 
-{{outlet}}
+  <footer></footer>
