--- a/app/templates/components/logo-meratech.hbs
+++ b/app/templates/components/logo-meratech.hbs
@@ -1,4 +1,4 @@
-<!--svg version="1.1" id="meratech-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg version="1.1" id="meratech-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
    viewBox="0 0 237 63.7" width="170" height="46" style="enable-background:new 0 0 236.4 62.9;" xml:space="preserve">
 <style type="text/css">
   .st0{fill-rule:evenodd;clip-rule:evenodd;fill:#C4161C;}
@@ -49,4 +49,4 @@
     </g>
   </g>
 </g>
-</svg-->
+</svg>
