--- a/app/templates/components/search-block.hbs
+++ b/app/templates/components/search-block.hbs
@@ -1,8 +1,5 @@
-
-      <div class="search-toggle fa fa-search fa-lg navbar-right"></div>
-      <form class="navbar-form navbar-right" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+ 
+      <div class="search-toggle fa fa-search fa-lg navbar-right" {{action "makeSearch"}}></div>
+      <form role="search">
+          <input type="text" class="" placeholder="Search">
       </form>
