--- a/app/styles/fonts.scss
+++ b/app/styles/fonts.scss
@@ -27,12 +27,12 @@
 
 @font-face {
     font-family: 'etelka-light';
-    src: url('../fonts/etelkalight-webfont.eot');
-    src: url('../fonts/etelkalight-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/etelkalight-webfont.woff2') format('woff2'),
-         url('../fonts/etelkalight-webfont.woff') format('woff'),
-         url('../fonts/etelkalight-webfont.ttf') format('truetype'),
-         url('../fonts/etelkalight-webfont.svg#etelka_light_proregular') format('svg');
+    src: url('../fonts/etelkalightpro-webfont.eot');
+    src: url('../fonts/etelkalightpro-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/etelkalightpro-webfont.woff2') format('woff2'),
+         url('../fonts/etelkalightpro-webfont.woff') format('woff'),
+         url('../fonts/etelkalightpro-webfont.ttf') format('truetype'),
+         url('../fonts/etelkalightpro-webfont.svg#etelka_light_proregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -40,12 +40,12 @@
 
 @font-face {
     font-family: 'etelka-narrow-text';
-    src: url('etelkanarrowtext-webfont.eot');
-    src: url('etelkanarrowtext-webfont.eot?#iefix') format('embedded-opentype'),
-         url('etelkanarrowtext-webfont.woff2') format('woff2'),
-         url('etelkanarrowtext-webfont.woff') format('woff'),
-         url('etelkanarrowtext-webfont.ttf') format('truetype'),
-         url('etelkanarrowtext-webfont.svg#etelka_narrow_text_proregular') format('svg');
+    src: url('../etelkanarrowtext-webfont.eot');
+    src: url('../etelkanarrowtext-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../etelkanarrowtext-webfont.woff2') format('woff2'),
+         url('../etelkanarrowtext-webfont.woff') format('woff'),
+         url('../etelkanarrowtext-webfont.ttf') format('truetype'),
+         url('../etelkanarrowtext-webfont.svg#etelka_narrow_text_proregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
