--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,197 @@
   <header class="header">
         {{main-navigation}}</header>
 
+<article style="width: 100%; height: 900px;">
+        <div id="rev_slider_68_1_wrapper" class="rev_slider_wrapper fullwidthbanner-container" style="width: 100%; height: 900px;">
+          <!-- START REVOLUTION SLIDER 5.0.7 fullwidth mode -->
+          <div id="rev_slider_68_1" class="rev_slider fullwidthabanner" style="display:none;" data-version="5.0.7">
+            <ul>  <!-- SLIDE  -->
+              <li data-index="rs-235" data-transition="fade" data-slotamount="default"  data-easein="default" data-easeout="default" data-masterspeed="1500"  data-rotate="0"  data-saveperformance="off"  data-title="Intro" data-description="">
+                <!-- MAIN IMAGE -->
+                <img src="../../assets/images/catalog-back.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="5" class="rev-slidebg" data-no-retina>
+                <!-- LAYERS -->
+
+                <!-- LAYER NR. 1 -->
+                <div class="tp-caption   tp-resizeme rs-parallaxlevel-1" 
+                   id="slide-235-layer-5" 
+                   data-x="['left','left','left','left']" data-hoffset="['530','553','127','58']" 
+                   data-y="['top','top','top','top']" data-voffset="['297','297','622','529']" 
+                        data-width="none"
+                  data-height="none"
+                  data-whitespace="nowrap"
+                  data-transform_idle="o:1;"
+             
+                   data-transform_in="x:right;s:1500;e:Power3.easeOut;" 
+                   data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;" 
+                  data-start="3000" 
+                  data-responsive_offset="on" 
+
+                  
+                  style="z-index: 9;"><img src="../../assets/images/catalog-canister.png" alt="" width="851" height="861" data-ww="['851px','851px','130px','100px']" data-hh="['861px','861px','225px','173px']" data-no-retina> 
+                </div>
+
+                <!-- LAYER NR. 2 -->
+                <div class="tp-caption   tp-resizeme rs-parallaxlevel-4" 
+                   id="slide-235-layer-1" 
+                   data-x="['right','right','center','center']" data-hoffset="['-254','-453','70','60']" 
+                   data-y="['middle','middle','middle','bottom']" data-voffset="['50','50','211','25']" 
+                        data-width="none"
+                  data-height="none"
+                  data-whitespace="nowrap"
+                  data-transform_idle="o:1;"
+             
+                   data-transform_in="x:right;s:1500;e:Power3.easeOut;" 
+                   data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;" 
+                  data-start="2500" 
+                  data-responsive_offset="on" 
+
+                  
+                  style="z-index: 5;"><img src="../../assets/images/catalog-front.png" alt="" width="311" height="897" data-ww="['311px','311px','500px','350px']" data-hh="['897px','897px','300px','210px']" data-no-retina> 
+                </div>
+
+
+                <!-- LAYER NR. 3 -->
+                <div class="tp-caption WebProduct-Title-Light   tp-resizeme rs-parallaxlevel-0" 
+                   id="slide-235-layer-7" 
+                   data-x="['left','left','left','left']" data-hoffset="['30','30','200','80']" 
+                   data-y="['middle','middle','top','top']" data-voffset="['-110','-110','137','130']" 
+                        data-fontsize="['90','90','75','75']"
+                  data-lineheight="['90','90','75','70']"
+                  data-width="none"
+                  data-height="none"
+                  data-whitespace="nowrap"
+                  data-transform_idle="o:1;"
+             
+                   data-transform_in="x:-50px;opacity:0;s:1000;e:Power2.easeOut;" 
+                   data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;" 
+                  data-start="1000" 
+                  data-splitin="none" 
+                  data-splitout="none" 
+                  data-responsive_offset="on" 
+
+                  
+                  style="z-index: 11; white-space: nowrap;">Beautiful<br/>
+            Websites 
+                </div>
+
+                <!-- LAYER NR. 4 -->
+                <div class="tp-caption WebProduct-SubTitle-Light   tp-resizeme rs-parallaxlevel-0" 
+                   id="slide-235-layer-10" 
+                   data-x="['left','left','left','left']" data-hoffset="['30','30','200','80']" 
+                   data-y="['middle','middle','top','top']" data-voffset="['14','44','294','277']" 
+                        data-fontsize="['15','15','15','13']"
+                  data-width="none"
+                  data-height="none"
+                  data-whitespace="nowrap"
+                  data-transform_idle="o:1;"
+             
+                   data-transform_in="x:-50px;opacity:0;s:1000;e:Power2.easeOut;" 
+                   data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;" 
+                  data-start="1250" 
+                  data-splitin="none" 
+                  data-splitout="none" 
+                  data-responsive_offset="on" 
+
+                  
+                  style="z-index: 12; white-space: nowrap;letter-spacing:2px;font-weight:500;">WORDPRESS / HTML & CSS / JQUERY 
+                </div>
+
+                <!-- LAYER NR. 5 -->
+                <div class="tp-caption WebProduct-Content-Light   tp-resizeme rs-parallaxlevel-0" 
+                   id="slide-235-layer-9" 
+                   data-x="['left','left','left','left']" data-hoffset="['30','30','200','80']" 
+                   data-y="['middle','middle','top','top']" data-voffset="['99','127','345','316']" 
+                        data-fontsize="['16','16','16','14']"
+                  data-lineheight="['24','24','24','22']"
+                  data-width="['448','356','334','277']"
+                  data-height="['none','none','76','68']"
+                  data-whitespace="normal"
+                  data-transform_idle="o:1;"
+             
+                   data-transform_in="x:-50px;opacity:0;s:1000;e:Power2.easeOut;" 
+                   data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;" 
+                  data-start="1500" 
+                  data-splitin="none" 
+                  data-splitout="none" 
+                  data-responsive_offset="on" 
+
+                  
+                  style="z-index: 13; min-width: 448px; max-width: 448px; white-space: normal;">Our portfolio includes some of the most prominent clients.<br/>
+            You can be a part now! 
+                </div>
+
+                <!-- LAYER NR. 6 -->
+                <div class="tp-caption WebProduct-Button rev-btn  rs-parallaxlevel-0" 
+                   id="slide-235-layer-8" 
+                   data-x="['left','left','left','left']" data-hoffset="['30','30','200','80']" 
+                   data-y="['middle','middle','top','top']" data-voffset="['238','238','456','420']" 
+                        data-width="none"
+                  data-height="none"
+                  data-whitespace="nowrap"
+                  data-transform_idle="o:1;"
+                    data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:300;e:Linear.easeNone;"
+                    data-style_hover="c:rgba(51, 51, 51, 1.00);bg:rgba(255, 255, 255, 1.00);"
+             
+                   data-transform_in="x:-50px;opacity:0;s:1000;e:Power2.easeOut;" 
+                   data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;" 
+                  data-start="1750" 
+                  data-splitin="none" 
+                  data-splitout="none" 
+                  data-actions='[{"event":"click","action":"scrollbelow","offset":"px"}]'
+                  data-responsive_offset="on" 
+                  data-responsive="off"
+                  
+                  style="z-index: 14; white-space: nowrap;letter-spacing:1px;">GET STARTED TODAY 
+                </div>
+              </li>
+            </ul>
+            <div class="tp-static-layers">
+            </div>
+            <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div> 
+          </div>
+        </div><!-- END REVOLUTION SLIDER -->
+        <script type="text/javascript">
+         
+          $(document).ready(function() {
+            if($("#rev_slider_68_1").revolution == undefined){
+              // revslider_showDoubleJqueryError("#rev_slider_68_1");
+            }else{
+              revapi68 = $("#rev_slider_68_1").show().revolution({
+                sliderType:"hero",
+                jsFileLocation:"assets/",
+                sliderLayout:"fullwidth",
+                dottedOverlay:"none",
+                delay:9000,
+                navigation: {
+                },
+                responsiveLevels:[1240,1024,778,480],
+                gridwidth:[1400,1240,778,480],
+                gridheight:[768,768,960,720],
+                lazyType:"none",
+                parallax: {
+                  type:"mouse+scroll",
+                  origo:"slidercenter",
+                  speed:1000,
+                  levels:[-10,2,3,4,5,6],
+                  disable_onmobile:"on"
+                },
+                shadow:0,
+                spinner:"off",
+                autoHeight:"off",
+                disableProgressBar:"on",
+                hideThumbsOnMobile:"off",
+                hideSliderAtLimit:0,
+                hideCaptionAtLimit:0,
+                hideAllCaptionAtLilmit:0,
+                debugMode:false,
+                fallbacks: {
+                  simplifyAll:"off",
+                  disableFocusListener:false,
+                }
+              });
+            }
+          }); /*ready*/
+        </script> 
+  </article>
+
   <footer></footer>
