main catalog slider almost done

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,6 +2,7 @@
 @import 'fonts';
 @import 'header';
 @import 'search-component';
+@import 'typography';
 
 /* RESET */
 html,body,div,ul,li,dl,dt,dd,h1,h2,h3,h4,h5,h6,pre,form,p,blockquote,fieldset,input, menu, section, button { margin: 0; padding: 0; }
