--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -8,55 +8,70 @@
             <ul>  <!-- SLIDE  -->
               <li data-index="rs-235" data-transition="fade" data-slotamount="default"  data-easein="default" data-easeout="default" data-masterspeed="1500"  data-rotate="0"  data-saveperformance="off"  data-title="Intro" data-description="">
                 <!-- MAIN IMAGE -->
-                <img src="../../assets/images/catalog-back.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="5" class="rev-slidebg" data-no-retina>
+                <img src="../../assets/images/catalog-back.jpg"  alt=""  data-bgposition="center center" data-bgfit="auto" data-bgrepeat="no-repeat" data-bgparallax="5" class="rev-slidebg" data-no-retina>
                 <!-- LAYERS -->
 
-                <!-- LAYER NR. 1 -->
-                <div class="tp-caption   tp-resizeme rs-parallaxlevel-1" 
+                <div class="tp-caption rs-parallaxlevel-1" 
                    id="slide-235-layer-5" 
-                   data-x="['left','left','left','left']" data-hoffset="['530','553','127','58']" 
-                   data-y="['top','top','top','top']" data-voffset="['297','297','622','529']" 
+                   data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" 
+                   data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']" 
+                        data-width="none"
+                  data-height="none"
+                  data-whitespace="nowrap"
+                  data-transform_idle="o:1;"
+             
+                   data-transform_in="x:-50px;opacity:0;s:1000;e:Power2.easeOut;" 
+                   data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;"  
+                  data-responsive_offset="on" 
+
+                  
+                  style="z-index: 1;"><img src="../../assets/images/catalog-back.jpg" alt="" width="2730" height="939" data-ww="['2730px','2730px','2730px','2730px']" data-hh="['900px','900px','900px','900px']" data-no-retina> 
+                </div>
+
+                <div class="tp-caption rs-parallaxlevel-2" 
+                   id="slide-235-layer-5" 
+                   data-x="['left','left','left','left']" data-hoffset="['0','-90','50','-90']" 
+                   data-y="['top','top','top','top']" data-voffset="['100','100','300','100']" 
                         data-width="none"
                   data-height="none"
                   data-whitespace="nowrap"
                   data-transform_idle="o:1;"
              
                    data-transform_in="x:right;s:1500;e:Power3.easeOut;" 
-                   data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;" 
-                  data-start="3000" 
-                  data-responsive_offset="on" 
+                   data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;"  
+                  data-responsive_offset="on"  
+                  data-start="300" 
 
                   
-                  style="z-index: 9;"><img src="../../assets/images/catalog-canister.png" alt="" width="851" height="861" data-ww="['851px','851px','130px','100px']" data-hh="['861px','861px','225px','173px']" data-no-retina> 
+                  style="z-index: 8;"><img src="../../assets/images/catalog-canister.png" alt="" width="851" height="861" data-ww="['723px','723px','723px','723px']" data-hh="['731px','731px','731px','731px']" data-no-retina> 
                 </div>
 
-                <!-- LAYER NR. 2 -->
-                <div class="tp-caption   tp-resizeme rs-parallaxlevel-4" 
+                <div class="tp-caption rs-parallaxlevel-3" 
                    id="slide-235-layer-1" 
-                   data-x="['right','right','center','center']" data-hoffset="['-254','-453','70','60']" 
-                   data-y="['middle','middle','middle','bottom']" data-voffset="['50','50','211','25']" 
+                   data-x="['right','right','right','right']" data-hoffset="['-150','-150','-150','-150']" 
+                   data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']" 
                         data-width="none"
                   data-height="none"
                   data-whitespace="nowrap"
                   data-transform_idle="o:1;"
+                  data-basealign="slide"
              
-                   data-transform_in="x:right;s:1500;e:Power3.easeOut;" 
-                   data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;" 
-                  data-start="2500" 
+                   data-transform_in="x:right;s:2000;e:Power3.easeOut;" 
+                   data-transform_out="opacity:0;s:2000;e:Power4.easeIn;s:1500;e:Power4.easeIn;" 
                   data-responsive_offset="on" 
+                  data-start="500" 
 
                   
-                  style="z-index: 5;"><img src="../../assets/images/catalog-front.png" alt="" width="311" height="897" data-ww="['311px','311px','500px','350px']" data-hh="['897px','897px','300px','210px']" data-no-retina> 
+                  style="z-index: 29;"><img src="../../assets/images/catalog-front.png" alt="" width="311" height="897" data-ww="['311px','311px','311px','311px']" data-hh="['897px','897px','897px','897px']" data-no-retina> 
                 </div>
 
 
-                <!-- LAYER NR. 3 -->
-                <div class="tp-caption WebProduct-Title-Light   tp-resizeme rs-parallaxlevel-0" 
+                <div class="tp-caption article-title title-white tp-resizeme rs-parallaxlevel-0" 
                    id="slide-235-layer-7" 
-                   data-x="['left','left','left','left']" data-hoffset="['30','30','200','80']" 
-                   data-y="['middle','middle','top','top']" data-voffset="['-110','-110','137','130']" 
-                        data-fontsize="['90','90','75','75']"
-                  data-lineheight="['90','90','75','70']"
+                   data-x="['left','left','left','left']" data-hoffset="['600','480','150','240']" 
+                   data-y="['middle','middle','top','top']" data-voffset="['-210','-210','-337','-130']" 
+                        data-fontsize="['25','25','25','25']"
+                  data-lineheight="['40','40','35','20']"
                   data-width="none"
                   data-height="none"
                   data-whitespace="nowrap"
@@ -64,43 +79,41 @@
              
                    data-transform_in="x:-50px;opacity:0;s:1000;e:Power2.easeOut;" 
                    data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;" 
-                  data-start="1000" 
+                  data-start="2000" 
                   data-splitin="none" 
                   data-splitout="none" 
                   data-responsive_offset="on" 
 
                   
-                  style="z-index: 11; white-space: nowrap;">Beautiful<br/>
-            Websites 
+                  style="z-index: 11; white-space: nowrap;">Hygiene <span>solutions</span> 
                 </div>
 
-                <!-- LAYER NR. 4 -->
-                <div class="tp-caption WebProduct-SubTitle-Light   tp-resizeme rs-parallaxlevel-0" 
+                <div class="tp-caption title-main title-white tp-resizeme rs-parallaxlevel-0" 
                    id="slide-235-layer-10" 
-                   data-x="['left','left','left','left']" data-hoffset="['30','30','200','80']" 
-                   data-y="['middle','middle','top','top']" data-voffset="['14','44','294','277']" 
-                        data-fontsize="['15','15','15','13']"
+                   data-x="['left','left','left','left']" data-hoffset="['600','480','150','240']" 
+                   data-y="['middle','middle','top','top']" data-voffset="['-80','-80','-254','277']" 
+                        data-fontsize="['50','40','50','50']"
+                  data-lineheight="['57','46','57','57']"
                   data-width="none"
                   data-height="none"
-                  data-whitespace="nowrap"
+                  data-whitespace="normal"
                   data-transform_idle="o:1;"
              
                    data-transform_in="x:-50px;opacity:0;s:1000;e:Power2.easeOut;" 
                    data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;" 
-                  data-start="1250" 
+                  data-start="2000" 
                   data-splitin="none" 
                   data-splitout="none" 
                   data-responsive_offset="on" 
 
                   
-                  style="z-index: 12; white-space: nowrap;letter-spacing:2px;font-weight:500;">WORDPRESS / HTML & CSS / JQUERY 
+                  style="z-index: 12; width: 550px; ">Outstanding efficiency and ecofriendly power 
                 </div>
 
-                <!-- LAYER NR. 5 -->
-                <div class="tp-caption WebProduct-Content-Light   tp-resizeme rs-parallaxlevel-0" 
+                <div class="tp-caption rs-parallaxlevel-0 hero-desription" 
                    id="slide-235-layer-9" 
-                   data-x="['left','left','left','left']" data-hoffset="['30','30','200','80']" 
-                   data-y="['middle','middle','top','top']" data-voffset="['99','127','345','316']" 
+                   data-x="['left','left','left','left']" data-hoffset="['600','480','388','240']" 
+                   data-y="['middle','middle','top','top']" data-voffset="['50','50','345','316']" 
                         data-fontsize="['16','16','16','14']"
                   data-lineheight="['24','24','24','22']"
                   data-width="['448','356','334','277']"
@@ -110,38 +123,35 @@
              
                    data-transform_in="x:-50px;opacity:0;s:1000;e:Power2.easeOut;" 
                    data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;" 
-                  data-start="1500" 
+                  data-start="2000" 
                   data-splitin="none" 
                   data-splitout="none" 
                   data-responsive_offset="on" 
 
                   
-                  style="z-index: 13; min-width: 448px; max-width: 448px; white-space: normal;">Our portfolio includes some of the most prominent clients.<br/>
-            You can be a part now! 
+                  style="z-index: 13; min-width: 448px; max-width: 448px; white-space: normal;">The Uber brand is more than a name. It’s a set of values, attributes, and artwork that reflects the spirit of our company. 
                 </div>
 
-                <!-- LAYER NR. 6 -->
-                <div class="tp-caption WebProduct-Button rev-btn  rs-parallaxlevel-0" 
+                <div class="tp-caption rs-parallaxlevel-0" 
                    id="slide-235-layer-8" 
-                   data-x="['left','left','left','left']" data-hoffset="['30','30','200','80']" 
-                   data-y="['middle','middle','top','top']" data-voffset="['238','238','456','420']" 
-                        data-width="none"
+                   data-x="['left','left','left','left']" data-hoffset="['600','480','388','240']" 
+                   data-y="['middle','middle','top','top']" data-voffset="['104','104','456','420']" 
+                        data-width="['550','480','456','420']"
                   data-height="none"
                   data-whitespace="nowrap"
                   data-transform_idle="o:1;"
-                    data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:300;e:Linear.easeNone;"
-                    data-style_hover="c:rgba(51, 51, 51, 1.00);bg:rgba(255, 255, 255, 1.00);"
              
                    data-transform_in="x:-50px;opacity:0;s:1000;e:Power2.easeOut;" 
                    data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;" 
-                  data-start="1750" 
+                  data-start="2000" 
                   data-splitin="none" 
                   data-splitout="none" 
                   data-actions='[{"event":"click","action":"scrollbelow","offset":"px"}]'
                   data-responsive_offset="on" 
                   data-responsive="off"
                   
-                  style="z-index: 14; white-space: nowrap;letter-spacing:1px;">GET STARTED TODAY 
+                  style="z-index: 14; white-space: nowrap;">
+                  <div class="button-default button-red">Каталог</div><div class="button-default button-download">Скачать каталог</div>
                 </div>
               </li>
             </ul>
@@ -164,15 +174,15 @@
                 delay:9000,
                 navigation: {
                 },
-                responsiveLevels:[1240,1024,778,480],
-                gridwidth:[1400,1240,778,480],
-                gridheight:[768,768,960,720],
+                responsiveLevels: [1440, 1340, 778, 480],
+                gridwidth:[1320,1024,778,480],
+                gridheight:[768,768,897,720],
                 lazyType:"none",
                 parallax: {
                   type:"mouse+scroll",
                   origo:"slidercenter",
                   speed:1000,
-                  levels:[-10,2,3,4,5,6],
+                  levels:[-2,-1,15,0,0,0],
                   disable_onmobile:"on"
                 },
                 shadow:0,
