--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -1,4 +1,6 @@
+
 $mainColor: #c71e21;
+$mainColorLighter: #e52625;
 $blackColor: #3b3d3f;
 $assetsImage: "images/assets.png";
 $introImage: "images/intro.png";
