--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -13,8 +13,8 @@
 
                 <div class="tp-caption rs-parallaxlevel-1" 
                    id="slide-235-layer-5" 
-                   data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" 
-                   data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']" 
+                   data-x="['center','center','center','center']" data-hoffset="['0','50','-70','20']" 
+                   data-y="['middle','middle','middle','middle']" data-voffset="['0','0','-5','-5']" 
                         data-width="none"
                   data-height="none"
                   data-whitespace="nowrap"
@@ -25,13 +25,13 @@
                   data-responsive_offset="on" 
 
                   
-                  style="z-index: 1;"><img src="../../assets/images/catalog-back.jpg" alt="" width="2730" height="939" data-ww="['2730px','2730px','2730px','2730px']" data-hh="['900px','900px','900px','900px']" data-no-retina> 
+                  style="z-index: 1;"><img src="../../assets/images/catalog-back.jpg" alt="" width="3400" height="1101" data-ww="['2779px','2779px','2779px','2779px']" data-hh="['900px','900px','900px','900px']" data-no-retina> 
                 </div>
 
                 <div class="tp-caption rs-parallaxlevel-2" 
                    id="slide-235-layer-5" 
-                   data-x="['left','left','left','left']" data-hoffset="['0','-90','50','-90']" 
-                   data-y="['top','top','top','top']" data-voffset="['100','100','300','100']" 
+                   data-x="['left','left','left','left']" data-hoffset="['0','-75','50','0']" 
+                   data-y="['top','top','top','top']" data-voffset="['100','100','330','330']" 
                         data-width="none"
                   data-height="none"
                   data-whitespace="nowrap"
@@ -43,7 +43,7 @@
                   data-start="300" 
 
                   
-                  style="z-index: 8;"><img src="../../assets/images/catalog-canister.png" alt="" width="851" height="861" data-ww="['723px','723px','723px','723px']" data-hh="['731px','731px','731px','731px']" data-no-retina> 
+                  style="z-index: 8;"><img src="../../assets/images/catalog-canister.png" alt="" width="851" height="861" data-ww="['723px','723px','638px','426px']" data-hh="['731px','731px','645px','431px']" data-no-retina> 
                 </div>
 
                 <div class="tp-caption rs-parallaxlevel-3" 
@@ -67,11 +67,11 @@
 
 
                 <div class="tp-caption article-title title-white tp-resizeme rs-parallaxlevel-0" 
-                   id="slide-235-layer-7" 
-                   data-x="['left','left','left','left']" data-hoffset="['600','480','150','240']" 
-                   data-y="['middle','middle','top','top']" data-voffset="['-210','-210','-337','-130']" 
-                        data-fontsize="['25','25','25','25']"
-                  data-lineheight="['40','40','35','20']"
+                  id="slide-235-layer-7" 
+                  data-x="['left','left','left','left']" data-hoffset="['600','480','130','70']" 
+                  data-y="['middle','middle','top','top']" data-voffset="['-210','-210','60','60']" 
+                  data-fontsize="['25','25','22','22']"
+                  data-lineheight="['40','40','29','25']"
                   data-width="none"
                   data-height="none"
                   data-whitespace="nowrap"
@@ -89,35 +89,36 @@
                 </div>
 
                 <div class="tp-caption title-main title-white tp-resizeme rs-parallaxlevel-0" 
-                   id="slide-235-layer-10" 
-                   data-x="['left','left','left','left']" data-hoffset="['600','480','150','240']" 
-                   data-y="['middle','middle','top','top']" data-voffset="['-80','-80','-254','277']" 
-                        data-fontsize="['50','40','50','50']"
-                  data-lineheight="['57','46','57','57']"
-                  data-width="none"
+                  id="slide-235-layer-10" 
+                  data-x="['left','left','left','left']" data-hoffset="['600','480','130','70']" 
+                  data-y="['middle','middle','top','top']" data-voffset="['-80','-80','115','120']" 
+                  data-fontsize="['50','40','45','30']"
+                  data-lineheight="['57','46','52','37']"
+                  data-width="['550','450','456','320']"
                   data-height="none"
                   data-whitespace="normal"
                   data-transform_idle="o:1;"
              
-                   data-transform_in="x:-50px;opacity:0;s:1000;e:Power2.easeOut;" 
-                   data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;" 
+                  data-transform_in="x:-50px;opacity:0;s:1000;e:Power2.easeOut;" 
+                  data-transform_out="opacity:0;s:1500;e:Power4.easeIn;s:1500;e:Power4.easeIn;" 
                   data-start="2000" 
                   data-splitin="none" 
                   data-splitout="none" 
                   data-responsive_offset="on" 
 
                   
-                  style="z-index: 12; width: 550px; ">Outstanding efficiency and ecofriendly power 
+                  style="z-index: 12; ">Outstanding efficiency and ecofriendly power 
                 </div>
 
                 <div class="tp-caption rs-parallaxlevel-0 hero-desription" 
                    id="slide-235-layer-9" 
-                   data-x="['left','left','left','left']" data-hoffset="['600','480','388','240']" 
-                   data-y="['middle','middle','top','top']" data-voffset="['50','50','345','316']" 
+                   data-x="['left','left','left','left']" data-hoffset="['600','480','130','70']" 
+                   data-y="['middle','middle','top','top']" data-voffset="['20','20','230','210']" 
                         data-fontsize="['16','16','16','14']"
                   data-lineheight="['24','24','24','22']"
                   data-width="['448','356','334','277']"
                   data-height="['none','none','76','68']"
+                  data-visibility="['on','on','off','off']"
                   data-whitespace="normal"
                   data-transform_idle="o:1;"
              
@@ -129,14 +130,14 @@
                   data-responsive_offset="on" 
 
                   
-                  style="z-index: 13; min-width: 448px; max-width: 448px; white-space: normal;">The Uber brand is more than a name. It’s a set of values, attributes, and artwork that reflects the spirit of our company. 
+                  style="z-index: 13; min-width: 448px; max-width: 448px; white-space: normal; text-shadow: 0px 0px 12px rgba(255, 255, 255, 0.45); color: #000000;">The Uber brand is more than a name. It’s a set of values, attributes, and artwork that reflects the spirit of our company. 
                 </div>
 
                 <div class="tp-caption rs-parallaxlevel-0" 
                    id="slide-235-layer-8" 
-                   data-x="['left','left','left','left']" data-hoffset="['600','480','388','240']" 
-                   data-y="['middle','middle','top','top']" data-voffset="['104','104','456','420']" 
-                        data-width="['550','480','456','420']"
+                   data-x="['left','left','left','left']" data-hoffset="['600','480','130','70']" 
+                   data-y="['middle','middle','top','top']" data-voffset="['104','104','260','240']" 
+                        data-width="['550','450','456','420']"
                   data-height="none"
                   data-whitespace="nowrap"
                   data-transform_idle="o:1;"
@@ -146,7 +147,6 @@
                   data-start="2000" 
                   data-splitin="none" 
                   data-splitout="none" 
-                  data-actions='[{"event":"click","action":"scrollbelow","offset":"px"}]'
                   data-responsive_offset="on" 
                   data-responsive="off"
                   
