--- a/app/templates/components/main-navigation.hbs
+++ b/app/templates/components/main-navigation.hbs
@@ -28,7 +28,7 @@
           </ul>
         </li-->
       </ul>
-      {{search-block}}
+      {{search-component}}
 
       <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Мир meratech</a></li>
