--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -1,3 +1,8 @@
+header{
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
 .main-navigation{
   .navbar-header{
 
@@ -12,7 +17,7 @@
 .navbar{
   height: 60px;
   &.navbar-default{
-    background-color: rgba(255,255,255,0.9);
+    background-color: rgba(255,255,255,0.83);
     border: none;
   }
   .navbar-header{
