--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,7 +1,7 @@
   <header class="header">
         {{main-navigation}}</header>
 
-<article>
+<article class="top-container"><div>
 <!-- START REVOLUTION SLIDER 5.0.7 auto mode -->
           <div id="rev_slider_4_1" class="rev_slider fullwidthabanner" style="display:none;" data-version="5.0.7">
             <ul>  <!-- SLIDE  -->
@@ -603,6 +603,30 @@
             }
           }); /*ready*/
         </script>
+      </div>
+      <ul class="industry-menu">
+        <li class="cows">
+          <span>Cow breeding</span>
+        </li>
+        <li class="pigs">
+          <span>Poultry</span>
+        </li>
+        <li class="chicken">
+          <span>Pig farms</span>
+        </li>
+        <li class="meat">
+          <span>Meat processing</span>
+        </li>
+        <li class="beer">
+          <span>Brewery & Soft drinks</span>
+        </li>
+        <li class="milk">
+          <span>Milk industry</span>
+        </li>
+        <li class="laundry">
+          <span>Laundry</span>
+        </li>
+        </ul>
 </article>
 
 <article style="width: 100%; height: 900px;">
