Top gallery bugfixes

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -165,7 +165,7 @@
               <!-- SLIDE  -->
               <li data-index="rs-19" data-transition="zoomout" data-slotamount="default"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000"  data-thumb="../../assets/images/fitness-100x50.jpg"  data-rotate="0"  data-saveperformance="off"  data-title="HTML5 Video" data-description="">
                 <!-- MAIN IMAGE -->
-                <img src="../../assets/images/fitness.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+                <img src="../../assets/images/slider-1.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
                 <!-- LAYERS -->
 
                 <!-- BACKGROUND VIDEO LAYER -->
@@ -392,7 +392,6 @@
                     hide_onleave:true,
                     hide_delay:200,
                     hide_delay_mobile:1200,
-                    tmp:'<div class="tp-title-wrap">    <div class="tp-arr-imgholder"></div> </div>',
                     left: {
                       h_align:"left",
                       v_align:"center",
@@ -475,6 +474,16 @@
         </li>
         </ul>
 </article>
+  <article>
+    <div class="container-fluid">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">.col-md-6</div>
+        <div class="col-md-6">.col-md-6</div>
+      </div>
+    </div>
+    </div>
+  </article>
 
 <article style="width: 100%; height: 900px;">
         <div id="rev_slider_68_1_wrapper" class="rev_slider_wrapper fullwidthbanner-container" style="width: 100%; height: 900px;">
@@ -605,7 +614,7 @@
                   data-responsive_offset="on" 
 
                   
-                  style="z-index: 13; min-width: 448px; max-width: 448px; white-space: normal; text-shadow: 0px 0px 12px rgba(255, 255, 255, 0.45); color: #000000;">The Uber brand is more than a name. It’s a set of values, attributes, and artwork that reflects the spirit of our company. 
+                  style="z-index: 13; min-width: 448px; max-width: 448px; white-space: normal; text-shadow: 0px 0px 12px rgba(255, 255, 255, 0.45); color: rgba(255, 255, 255, 0.7);">The Uber brand is more than a name. It’s a set of values, attributes, and artwork that reflects the spirit of our company. 
                 </div>
 
                 <div class="tp-caption rs-parallaxlevel-0" 
